# pastebin-clone

./: .coverage  .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  taskfile.yml  test.db
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 890a58e66250_add_users_table.py  9dad7c9ec84a_create_pastes_table.py  fc00ee0c876f_add_users_table.py
app/: main.py
app/api/v1/: auth.py  pastes.py
app/core/: celery_app.py  config.py  database.py  redis_client.py  security.py
app/models/: __init__.py  paste.py  user.py
app/schemas/: paste.py  user.py
app/services/: auth.py  paste.py
app/tasks/: cleanup.py
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/ssl/: cert.pem  key.pem
tests/: conftest.py  test_auth.py  test_pastes.py
